--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="card">
             <img src="./images/whatsapp.png" alt="">
             <h1>WhatsApp</h1>
-            <p>+91-9623088065<br>+91-8857835398</p>
+            <p>+91-<br>+91-</p>
         </div>
         
     </div>   
@@ -167,7 +167,7 @@
             </div>
         
         <div class="copyright"> 
-            <p>Dekstop use only<br>Developed By: Madhavi Lanje<br>Date: 17/05/2021</p>
+            <p>Desktop use only<br>Developed By: Madhavi Lanje<br>Date: 17/05/2021</p>
         </div></footer>
 
 
