--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         <div class="flex-1">
             <h2>About <span>Me</span></h2>
-            <h3>Helloo...</h3>
+            <h3>Hello...</h3>
             <p>Pursuing BTech in Computer Science and Engineering from G. H. Raisoni College Of Engineering, Nagpur. I have completed an internship at The Sparks Foundation as an Android App Developer (May 2021-June 2021). I have also completed Python & Machine Learning courses through Udemy.</p>
 
             <div class="social">
